1999-09-20  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtk-doc.dsl.in: If a Chapter has role="no-toc" we don't generate a
	table of contents. This is useful if a better contents page has been
	added manually, e.g. for the GTK+ Widgets & Objects page. (But it is
	a bit of a hack.)

	* gtkdoc-scanobj.in: added --nogtkinit flag which will make it call
	gtk_type_init() rather than gtk_init(). This is useful when it is
	run automatically to update the docs by a cron job or similar and a
	connection to an X server is not desirable. However, if any widgets
	need a connection to X in their class init function then this can't
	be used (e.g. GtkFontSelection at present).

Mon Sep 20 09:09:12 1999  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in gtkdoc-mktmpl.in: (ParseStructDeclaration): 
	Fixed up the code to do /*< private >*/ ... stripping.

1999-09-10  Martin Baulig  <martin@home-of-linux.org>

	* gtkdoc.dsl.in ($generate-chapter-toc$): Return #t, not #f.

1999-09-09  Martin Baulig  <martin@home-of-linux.org>

	* gtkdoc-scan.in (ScanHeader): Don't force typedefs and other
	things to start in column 0; allow some spaces in front of them.
	Output `typedef struct { ... } name' structs as typedef, not as
	structure.

1999-09-08  Martin Baulig  <martin@home-of-linux.org>

	* gtkdoc-mkdb.in (CreateValidSGMLID): `s/::/-/g;' for CORBA objects.

1999-08-22  Erik Walthinsen  <omega@cse.ogi.edu>

	* gtkdoc-scan.in: modified so it will find any Class, not just Gtk
	and Gnome classes.  Introduces the possibility of extraneous Class
	definitions (verified), which should be pruned somehow (haven't
	analyzed the false positive yet).

1999-08-22  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in: a few fixes to ParseStructDeclaration. It still
	has problems with nested structs/unions like those which occur in
	gtkclist.h and gtktypeutils.h.

	* configure.in: removed gtk-doc.spec from AC_OUTPUT, as	whoever wrote